--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API for portfolio website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": "mocha --recursive",
+    "test:watch": "nodemon --exec 'mocha --recursive'"
   },
   "author": "Michael Bruce Allen",
   "license": "ISC",
