--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha --recursive",
-    "test:watch": "nodemon --exec 'mocha --recursive'"
+    "test": "mocha --recursive ./test",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Michael Bruce Allen",
   "license": "ISC",
